[gd_scene load_steps=13 format=2]

[ext_resource path="res://Client.gd" type="Script" id=1]
[ext_resource path="res://Minecraft AE(支持中文).ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[node name="Client" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 115.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Client
Ethan and the Youth 1.0 Alpha 3"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -50.0
margin_right = 82.0
custom_fonts/font = SubResource( 7 )
text = "发送"

[node name="TextEdit" type="TextEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -51.0
margin_right = 426.0
custom_fonts/font = SubResource( 8 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 61.0
margin_right = 594.0
margin_bottom = 548.0
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 4 )
custom_fonts/bold_font = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )

[node name="TextEdit2" type="TextEdit" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -521.0
margin_top = -598.0
margin_right = -154.0
margin_bottom = -562.0
custom_fonts/font = SubResource( 9 )
text = "ws://sb.run-us-west2.goorm.site"

[node name="Button2" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -153.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 10 )
text = "切换"

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Button2" to="." method="_on_Button2_button_up"]
